# WaveBuzzer

./: CMakeLists.txt  LICENSE  README.md  arctime.qml  arctime.qmlc  joystick.h  joystick_linux.cpp  joystick_win.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  resources.rc  videowidget.cpp  videowidget.h
